*Empty MediaWiki Message*

--- a/Jannie_Bakker-Rietman.mw
+++ b/Jannie_Bakker-Rietman.mw
@@ -2,7 +2,7 @@
 
 Ze studeerde Nederlaands in [[Rieksuniversiteit Grunning|Stad]] bij [[Hendrik Entjes]] en gunk vanof begun jaoren zeuventig gedichten, verhalen en columns schrieven in 't [[Gällemunigers]]. Stokkies van heur hebt in dagblad [[de Stentor]] estaone.
 
-In 1973 naamp ze 't initiatief veur de schrieversveriening de [[Gællemuniger Taelkrink]]. Mit de studenten [[Tim Scherings]] uut [[Aisen]], [[Henk Bloemhoff]] uut [[Ni'jberkoop]] en [[Ton Kolkman]] uut [[Eanske]] begunde ze 't aandere jaor Nedersaksisch tiedschrift [[De Pennevogel]].
+In 1973 naamp ze 't initiatief veur de schrieversveriening de [[Gællemuniger Taelkrink]]. Mit de studenten [[Tim Scherings]] uut [[Aisen]], [[Henk Bloemhoff]] uut [[Ni'jberkoop]] en [[Ton Kolkman]] uut [[Eanske]] begunde ze 't aandere jaor Nedersaksisch literair tiedschrift ''[[De Pennevogel]]''.
 
 Bij de [[Iesselakkedemie]] kwaamp in 2004 heur dichtbundel ''Meer geliek as eigen'' uut. Een centraol thema daorin is de problematiek van een opgruiend gezin. Wieder stiet ze in haoste alle bundels van de Iesselakkedemie waorin de risseltaoten van de tweejaorlijkse schriefwedstried van de akkedemie epubliceerd wördt.
 
