*Empty MediaWiki Message*

--- a/Jannie_Bakker-Rietman.mw
+++ b/Jannie_Bakker-Rietman.mw
@@ -1,6 +1,6 @@
 '''Jannie Bakker-Rietman''' ([[Gällemuden]], [[5 oktober]] [[1953]]) is een [[Nedersaksisch]] schriefster uut [[Aoveriessel]].
 
-Ze studeerde Nederlaands in [[Rieksuniversiteit Grunning|Stad]] bij [[Hendrik Entjes]] en gunk vanof begun jaoren zeuventig gedichten, verhalen en columns schrieven in 't [[Gällemunigers]]. Stokkies van heur hebt in dagblad [[de Stentor]] estaone.
+Ze studeerde Nederlaands in [[Rieksuniversiteit Grunning|Stad]] bij [[Hendrik Entjes]] en schref vanof begun jaoren zeuventig gedichten, verhalen en columns in 't [[Gällemunigers]]. Stokkies van heur hebt in dagblad [[de Stentor]] estaone.
 
 In 1973 naamp ze 't initiatief veur de schrieversveriening de [[Gællemuniger Taelkrink]]. Mit de studenten [[Tim Scherings]] uut [[Aisen]], [[Henk Bloemhoff]] uut [[Ni'jberkoop]] en [[Ton Kolkman]] uut [[Eanske]] begunde ze 't aandere jaor Nedersaksisch literair tiedschrift ''[[De Pennevogel]]''.
 
