+[[Kategorie:Achterhook]]; +[[Kategorie:Woater in Gelderlaand]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Båkske_Bekke.mw
+++ b/Båkske_Bekke.mw
@@ -1,1 +1,4 @@
 De '''Båkske Bekke''' is ne bekke midden in den [[Achterhook]]. De bekke hevt höär öärsprung in et [[Korenburgerveen|Korenbürgerveane]] en [[Levelde|Leevelde]], dee vlööit döär [[Reurle]] en [[Vorden]] når den [[Iessel|Yssel]]. De bekke sörget vöär nen deyl van de afwåtering van de landbowgründen van den Achterhook. Dit wyr vanav et ende van de 19e eeuwe steads intensiver rundum de bekke, wårdöär de bewöyners van wåteroaverlast last kregen. Dårup wyr in 1919 et [[wåterskap Båkske Bekke]] uperichtet, dat de wåterstand in et gebeed mos reagelen. Tüsken 1926 en 1940 wyren der vöär warkverskavving verskydene projekten uutevoord um den wåteroaverlast in winter en sommer too beparken. De avvoorkapasiteit van sowal de Båkske Bekke as de [[Veengoot|Veengout]] wyr vergröyt en wyren völle sekundaire wåterlöype in et gebeed verruumd en uutedeped. De Veengout löpt geruume tyd evenwydig an de bekke en vlööit ter höygte van [[Wichmond]] såmen met de Båkske Bekke. Vanav dår takt ouk et [[Stroomkanaal van Hackfort|Ströymkanål van Hackfort]] av når den Yssel. Et [[Waterschap Rien en Iessel|Wåterskap Ryn en Yssel]] hevt in de 21e eeuwe untwikkeld um et gebeed rundum de bekke weder antrekkeliker te måken vöär natuurvörming. Der süllet rekreatsy en kultuurhistory ne plekke krygen, under andere döär olde voordes wyder terüg too brengen en olde wåtermöllens terüg too plåtsen.
+
+[[Kategorie:Achterhook]]
+[[Kategorie:Woater in Gelderlaand]]
