[[:Kategorie:Onderwies]] weg-ehaald; [[:Kategorie:Universiteat]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Universiteat.mw
+++ b/Universiteat.mw
@@ -27,4 +27,4 @@ In de [[Angelsassies]]e wearld kö'j mangs ne [[studiebeurze]] kriegen. In duurs
 In völle Skandinaviese laanden was töt de tweede helfte van de eerste tien joar van et [[21e eeuw|21e joarhoonderd]] et studeren gratis. Doarnoa gungen [[Denemoarken]], [[Zweden]] en [[Finlaand]] geeld vroagen an internasjonale studeanten. Dit geeldt nog aait neet vuur studeanten oet de [[EU]]-lidstoaten, [[EEA]]-leden en inwonners van [[Zwitserlaand]]. Internasjonale studeanten dee as good öar beste doot, köant wal zovölle beurzen kriegen det et der hoaste vuur niks bie langs kan.
 
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Onderwies]]
+[[Kategorie:Universiteat| ]]
