*Empty MediaWiki Message*

--- a/Foodvalley.mw
+++ b/Foodvalley.mw
@@ -57,6 +57,6 @@ In de Foodvalley bint meyr as 2600 bedryven en instellings dee samen vöär 21.7
 
 ==Verwysings==
 * [[https://www.regiofoodvalley.nl/ Webstea van regio Foodvalley]]
-</references>
+<nowiki><references/></nowiki>
 
 {{Dialekt|sdz}}
