*Empty MediaWiki Message*

--- a/Foodvalley.mw
+++ b/Foodvalley.mw
@@ -56,7 +56,7 @@ In de Foodvalley bint meyr as 2600 bedryven en instellings dee samen vöär 21.7
 * [[Hatchtech]]
 
 ==Verwysings==
-* [[https://www.regiofoodvalley.nl/ Webstea van regio Foodvalley]]
+* [[https://www.regiofoodvalley.nl/ Webstea van regio Foodvalley]
 <references/>
 
 {{Dialekt|sdz}}
