*Empty MediaWiki Message*

--- a/Jödenbarchyn.mw
+++ b/Jödenbarchyn.mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:JodenbergjeHardenberg.jpg|thumb|right|'t Barchien an de Vechte.]]
+[[Ofbeelding:JodenbergjeHardenberg.jpg|thumb|right|'t Barchyn an de Vechte.]]
 
-Et '''Jödenbarchyn''' (Neaderlands: ''Jodenbergje'') is een olde begraavplaatse in [[Hardenbarg (stad)|Hardenbarg]] up een [[terpe]] in et winterbedde an de [[Vechte]]. Disse was van de [[jeuden|jöden]] den eyrtyds in Hardenbarg eleaved hebbet, mar disse jöödse familys bint in de [[Tweede Wereldoorlog|2e Wearldoorlog]] üm-ekummen in döärgånskampen. Dree van de meyr as söäventig hebbet et oaverleaved, denne bint nå den oorlog ouk uut Hardenbarg vertrükken. Sy hebbet dree [[synagoge]]s ehadded, wårunder an et Oosteinde.
+Et '''Jödenbarchyn''' ([[neaderlandsk]]: ''Jodenbergje'') is een olde begraavplaatse in [[Hardenbarg (stad)|Hardenbarg]] up een [[terpe]] in et winterbedde an de [[Vechte]]. Disse was van de [[jeuden|jöden]] den eyrtyds in Hardenbarg eleaved hebbet, mar disse jöödse familys bint in de [[Tweede Wereldoorlog|2e Wearldoorlog]] üm-ekummen in döärgånskampen. Dree van de meyr as söäventig hebbet et oaverleaved, denne bint nå den oorlog ouk uut Hardenbarg vertrükken. Sy hebbet dree [[synagoge]]s ehadded, wårunder an et Oosteinde.
 
 In 1766 kreygen de Hardenbarger jöden een eigene begraavplaatse up een terpe in et winterbedde an de Vechte. Dat was vöär ear heyl belangryk, wårümme at in et jöödse gelöyv een plichte ümme een eigene begraavplaatse te hebben. Noch ait ligt et Jödenbarchyn an de over van de Vechte.
 et Jödenbarchyn hevt een noch oldere geskydenisse. In de [[middeleeuwen|middeleywen]] lagen hyr twey terpen. Up eyne stünden wårschynlik een verstarkte woaning, havesåte 't Holt. Up de andere stünden een kapel. Up een kaarte uut 1783 vindet wy beide terpen noch terügge. Se wördden toon ümgeaven döär water, med an de eyne kante een grachte. De havesåte was toon al lange vord.
