--- a/Martin_Koster.mw
+++ b/Martin_Koster.mw
@@ -27,6 +27,8 @@ Toe as d'r in 1992 drokte ontstund umdet een antal leden de skriever en politicu
 ==Uutgaoven van en oaver Koster==
 Koster zien wark is, mit uutzondering van de intussen ebundelde gedichten, miest nog verspreid verskenen. In 1995 publiceerden e bi'j uutgeveri'je [[Het Drentse Boek]] ''Zölfportret mit sparzegelties''. Hi'j maakten de eerste Drèentse [[stripverhaol|stripvertaling]], 't [[Suske en Wiske]]-album ''Het hondeparadies'' (Grunning, 1998) en skreef de Nederlaanstalige monografie ''Tegen de stroom in. Het kunstenaarschap van Rudi Seidel'' (Zuudwolde, 1998).<ref>[http://www.hetdrentseboek.nl/content/view/25/27/ Het Drentse Boek oaver Martin Koster]</ref> De bundel ''Hotel an 't spoor'', mit zien gedichten van de leste dartig jaor, kwaamp in 2010 bi'j Het Drentse Boek uut.<ref>[http://www.hetdrentseboek.nl/content/view/167/1/ Ankondiging van ''Hotel an 't spoor'' op de webstee van Het Drentse Boek]</ref> Mit dizze bundel wun Koster in 2011 de [[Dagblad van het Noorden Streektaalpries]], in de kattegerie proza en poëzie.
 
+In 2017 verscheen bi'j Het Drentse Boek ''Oostwaartsch! Grensverkennings van een Sudentendrent'', een reisverslag diels in 't Nederlaands, diels in 't Drèents eschreven. In 2020 verscheen, ok bi'j Het Drentse Boek, ''Ik trap hum an'', een keuze uut de [[nöalstukken|columns]] die Koster onder de name Sjarlefrans schreef veur 't [[Dagblad van het Noorden]].
+
 't Roetnummer van winter 1999/2000 stund in 't teken van Koster zien ofskeid as heufdredacteur. Zien wark is in det nummer bi'jien ebrocht mit as titel ''Ave Reest''. In 2006 kwaamp bi'j de stichting Drentse Taol (vandage 't [[Huus van de Taol]]) een 'schrieverspetret' op dvd uut oaver Koster.<ref name="huus" />
 
 ==Citaoten==
