/* Nedersaksiese veurbeelden */ Wat aover Koster derbij

--- a/Nöalstukken.mw
+++ b/Nöalstukken.mw
@@ -8,7 +8,7 @@ Kolumnisten kriegt van den Nederlaandsen rechter ne grote moate van vrieheid in 
 * [[Gerrit Dannenberg]] (skriever in Tweants blad ''[[De Roskam]]'')
 * [[Hanny Diemer]] (veur Radio Noord in Grunning) 
 * [[Helligen Hendrik]] (Bert Eeftink: ''De twee minuten van Helligen Hendrik'' veur Radio Oost)
-* [[Martin Koster]] (in 't ''[[Dagblad van het Noorden]]'')
+* [[Martin Koster]] (as 'Sjarlefrans' in 't ''[[Dagblad van het Noorden]]''; keuze ebundeld as ''Ik trap hum an'', Het Drentse Boek, 2020)
 * [[Bert van de Bunte|Lammertnôom]] (Bert van de Bunte, in ''Veluweland'', [[Nunspeet|gemeente Nunspeet]])
 * [[Wilm van Noesel]] (skriever oet [[Nijverdal]])
 * [[Willie Oosterhuis]]
