--- a/Ingeborg_Nienhuis.mw
+++ b/Ingeborg_Nienhuis.mw
@@ -1,7 +1,7 @@
 '''Ingeborg Nienhuis''' ([[Zoltkamp]], 1981) is een schriefster in 't [[Grunnegs|Grunnings]] en [[Nederlaands]], en [[streektaalfunctionaris]] bij 't [[Bureau Groninger Taal en Cultuur]].
 
 ==Studie==
-Nienhuis studeerde Nederlaands en [[journalistiek]] an de Rieksuniversiteit Grunning en behaalde een [[masteropleiding|master]] in de [[pedagogiek]].
+Nienhuis studeerde Nederlaands en [[journalistiek]] an de [[Rieksuniversiteit Grunning]] en behaalde een [[masteropleiding|master]] in de [[pedagogiek]].
 
 ==Streektaalfunctionaris==
 Op 1 april 2016 wördden Nienhuis in de plekke van [[Eline Brontsema]] streektaalfunctionaris bij 't Bureau Groninger Taal en Cultuur van de Rieksuniversiteit Grunning. Dizze functie is der veur 't onderzuken, vasteleggen en anjagen van de Grunninger taal.
