*Empty MediaWiki Message*

--- a/Oss.mw
+++ b/Oss.mw
@@ -5,9 +5,9 @@
 | lokatie = LocatieOss
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Oss
-| öppervlakte = 170,93 km²
-| öppervlakte laand = 163,16 km²
-| öppervlakte water = 7,77 km²
+| öppervlakte = 170,93
+| öppervlakte laand = 163,16
+| öppervlakte water = 7,77
 | inwonners = 92.517
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 567
@@ -40,11 +40,10 @@ Andere dörpe en kernen in de gemeynde sint
 *Neerlangel	(70)
 *Neerloon	(205)
 *Oijen	(1.270)
-*Oss	(58.365)
 *Overlangel	(445)
 *Ravenstein	(3.070)
 *Teeffelen	(190)
-
+Wyders gevt et noch de nåberskappen Achterste Heide, Duurendseind, Gement, Boveneind, Benedeneind, Kleine Koolwijk en Voorste Heide.
 == Uutgånde verwysing ==
 * [https://www.oss.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
