--- a/Wearldspråke.mw
+++ b/Wearldspråke.mw
@@ -8,7 +8,7 @@ Een veurbield van visueel materiaol van Wearldspråke is een foto van een in de 
 ==Achtergrond==
 Wearldspråke is voortekomen uut eerdere internetactiviteiten onder de noemer 'Tweants: Wearldsproake', toen Ter Denge besleut um zien bosschop wieder te trekken van 't [[Tweants]] naor 't Nedersaksisch in 't algemien. 't Idee det Wearldspråke consequent uutdrag, is det 't Nedersaksisch, krek as elke taal, geschikt is veur gebruuk in alle facetten van 't dagense leven, en niet mar aal in de hoek edrokt mut wörden van [[folklorisme]] en platvloerse humor. De meniere umme 't Nedersaksisch leventig te holden, stelt Wearldspråke, is deur 't te blieven praoten, 'So vöäle en so vake as et kan.'
 
-Veur zien schrieverije (in de [[Riessens|Riessense]] variaant van 't Tweants) gebrök Ter Denge de mandielig Nedersaksisch-[[Platduuts|Platduutse]] '[[Nysassiske Skryvwyse]]'. In zien podcast is hij partietoeren allennig an 't woord, of mangs hef e een gesprek mit een gast. In oflevering 24, van 29 augustus 2019, had e de bekende [[Sallaand|Sallaandse]] rockmuzikaant [[Hendrik Jan Bökkers]] aover de vloere.
+Veur zien schrieverije (in de [[Riessens|Riessense]] variaant van 't Tweants) gebrök Ter Denge de mandielig Nedersaksisch-[[Platduuts|Platduutse]] '[[Nysassiske Skryvwyse]]'. In zien [[podcast]] is hij partietoeren allennig an 't woord, of mangs hef e een gesprek mit een gast. In oflevering 24, van 29 augustus 2019, had e de bekende [[Sallaand|Sallaandse]] rockmuzikaant [[Hendrik Jan Bökkers]] aover de vloere.
 
 ==Bronnen==
 * [https://wearldsproake.nl/ De webstee van Wearldspråke]
