--- a/Nedersaksische_tiedschriften.mw
+++ b/Nedersaksische_tiedschriften.mw
@@ -108,7 +108,8 @@ In 1974 verschenen de eerste beschouwelijke teksten oaver schrieveri'je in ''De 
 End jaoren zeuventig vunden een antal babyboomers 't streektalige literaire wereldtien verstikkend oldmoods en gezapig. Ze wolden een ni'j orgaan veur Nedersaksische schrieveri'je die gien blad veur de mond naamp en oaver alle denkbare onderwarpen kun gaon.
 
 ===Roet===
-[[Ofbeelding:Martinitoren6.jpg|250px|thumb|160px|right|In [[Grunnen (stad)|Stad]] bint zowal 't Drèentse letterkundige tiedschrift ''[[Roet (tiedschrift)|Roet]]'' als 't Grunningse ''[[Krödde (tiedschrift)|Krödde]]'' geboren]]Op 1 april 1979 verscheen 't eerste nummer van ''[[Roet (tiedschrift)|Roet]]'', een Drèentstalig blad op-ezet deur [[Martin Koster]] en [[Ton Kolkman]]. Anvankelijk was 't blad satirisch van aord en veural de eerste jaorgaank was dudelijk inspireerd op 't eerdere Grunninger tiedschrift ''[[Twijspaalk]]''. De inhold is tègenwoordig evarieerd; d'r verschient verhalen, gedichten, boekbesprekings, essays en zuks.
+[[Ofbeelding:Martinitoren6.jpg|thumb|160px|In [[Grunnen (stad)|Stad]] bint zowal 't Drèentse letterkundige tiedschrift ''[[Roet (tiedschrift)|Roet]]'' als 't Grunningse ''[[Krödde (tiedschrift)|Krödde]]'' geboren]]
+Op 1 april 1979 verscheen 't eerste nummer van ''[[Roet (tiedschrift)|Roet]]'', een Drèentstalig blad op-ezet deur [[Martin Koster]] en [[Ton Kolkman]]. Anvankelijk was 't blad satirisch van aord en veural de eerste jaorgaank was dudelijk inspireerd op 't eerdere Grunninger tiedschrift ''[[Twijspaalk]]''. De inhold is tègenwoordig evarieerd; d'r verschient verhalen, gedichten, boekbesprekings, essays en zuks.
 
 ''Roet'', mit de ondertitel ''Drents Letterkundig Tiedschrift'', kump vier keer in 't jaor uut en wördt vandage uutegèven deur [[Het Drentse Boek]], onderdiel van 't [[Huus van de Taol]]. Ie viendt d'r ok Nederlaands- en aanderstalige bi'jdragen in. 't Blad hef een eigen anfieterspries veur Drèentstalige schrieveri'je ekend, de [[Roet (tiedschrift)#Reyer Onno van Ettingen-pries|Reyer Onno van Ettingen-pries]].
 
