[[mw:Special:MyLanguage/Help:Extension:Linter/bogus-image-options|Lint-fouten: Onjuist opgegeven opties mediabestand]] ([[Spesiaal:LintErrors|help med]])

--- a/Asten.mw
+++ b/Asten.mw
@@ -1,4 +1,4 @@
-[[Bestaand:1866_Asten.png|thumb|right"200px|Oolde kaarte van Asten]]
+[[Bestaand:1866_Asten.png|thumb|200px|Oolde kaarte van Asten]]
 
 '''Asten''' (op zien [[Broabaants]]: ''Ááste'') is ne [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Noord-Broabaant]]. Op den [[1 april|eersten april]] van [[2016]] wonnen der 16.667 leu op ne vlakte van 70,4 [[veerkaante kilometer|km²]]. De gemeente is deel van de [[plusregio]] [[Samenwerkingsverband Regio Eindhoven|Eandhowen]]. De heuwdkern van de gemeente is et doarp [[Asten (doarp)|Asten]], woer as 13.069 leu wont. Aandere döarpe in de gemeente zeent [[Heusden (Asten)|Heusden]] en [[Ommel (Nederlaand)|Ommel]].
 
@@ -64,12 +64,12 @@ Börgemeaster is [[Hubert Vos (politikus)|Hubertus Vos]]. Hee hef hulpe van dree
 
 == Oetgoande verwiezingen ==
 {{Commonscat|Asten, Netherlands}}
-* [http://www.asten.nl Webstea van de gemeente]
-* [http://www.siris.nl Webstea van den lokalen umroep met niejs en informasie van de gemeente]
-* [http://www.carillon-museum.nl Webstea van et Nationaal Beiaardmuseum]
-* [http://geschiedenisasten.nl Webstea oawer et verleden van Asten]
+* [http://www.asten.nl/ Webstea van de gemeente]
+* [http://www.siris.nl/ Webstea van den lokalen umroep met niejs en informasie van de gemeente]
+* [http://www.carillon-museum.nl/ Webstea van et Nationaal Beiaardmuseum]
+* [http://geschiedenisasten.nl/ Webstea oawer et verleden van Asten]
 
 {{Noord-Braobant}}
 
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Gemeente in Noord-Braobant]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Gemeente in Noord-Braobant]]
