--- a/Asten.mw
+++ b/Asten.mw
@@ -1,6 +1,6 @@
 [[Bestaand:1866_Asten.png|thumb|200px|Oolde kaarte van Asten]]
 
-'''Asten''' (op zien [[Broabaants]]: ''Ááste'') is ne [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Noord-Broabaant]]. Op den [[1 april|eersten april]] van [[2016]] wonnen der 16.667 leu op ne vlakte van 70,4 [[veerkaante kilometer|km²]]. De gemeente is deel van de [[plusregio]] [[Samenwerkingsverband Regio Eindhoven|Eandhowen]]. De heuwdkern van de gemeente is et doarp [[Asten (doarp)|Asten]], woer as 13.069 leu wont. Aandere döarpe in de gemeente zeent [[Heusden (Asten)|Heusden]] en [[Ommel (Nederlaand)|Ommel]].
+'''Asten''' (op zien [[Broabaants]]: ''Ááste'') is ne [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Noord-Broabaant]]. Op den [[1 april|eersten april]] van [[2016]] wonnen der 16.667 leu op ne vlakte van 70,4 [[veerkaante kilometer|km²]]. De gemeente is deel van de [[plusregio]] [[Samenwerkingsverband Regio Eindhoven|Eandhowen]]. De heuwdkern van de gemeente is et doarp [[Asten (doarp)|Asten]], woer as 13.069 leu wont. Aandere döarpe in de gemeente zeent [[Heusden (Asten)|Heusden]] en [[Ommel (Nederlaand)|Ommel]].
 
 ==Umskriewing==
 Een groot deel van de gemeente lig in et [[(vene (grondsoorte)|hoogvenne]] van [[Nasjonaalpark De Groote Peel]]. Zeenswearde zaken zeent de [[niejgotiek|niejgotiese]] koarke van Oonze Lewe Vrouwe Presentatie, bouwd tusken 1896 en 1898. In Ommel goat völle [[Rooms-Katholieke Karke|Rooms-Katholieken]] op [[bedevoart]] noar de koarke dee as doar noa den [[Tweeden Wearldoorlog]] bouwd is. Et gemeentehoes is in [[1940]] ebouwd. Et wör tekend duur [[Alexander Kropholler]].
