*Empty MediaWiki Message*

--- a/Scharpenzeel.mw
+++ b/Scharpenzeel.mw
@@ -1,6 +1,6 @@
 '''Scharpenzeel''' kan verwiezen naor:
 
-*[[Scharpenzeel (Frieslaand)]] - een plak in de [[Stellingwarven]]
-*[[Schaarpezeel]] - een gemeente en daarp in [[Gelderlaand]], an de grens mit [[Utrecht (previnsie)|Utrecht]]
+*[[Scharpenzeel (Frieslaand)]] - een plak in de Stellingwarven
+*[[Schaarpezeel]] - een gemeente en daarp in Gelderlaand, an de grens mit Utrecht
 
 {{dv}}
