[[:Kategorie:Wikipedie:Gin Kattegerie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Foodvalley.mw
+++ b/Foodvalley.mw
@@ -60,3 +60,5 @@ In de Foodvalley bint meyr as 2600 bedryven en instellings dee samen vöär 21.7
 <references/>
 
 {{Dialekt|sdz}}
+
+[[Kategorie:Wikipedie:Gin Kattegerie]]
