--- a/Reusel-De_Mierden.mw
+++ b/Reusel-De_Mierden.mw
@@ -1,8 +1,8 @@
 {{Gemeante
-| bestaandsnaam vlagge = Reusel-De_Mierden_vlag.svg
-| bestaandsnaam woapn = Reusel-De_Mierden_wapen.svg
+| bestaandsnaam vlagge = Reusel-De Mierden vlag.svg
+| bestaandsnaam woapn = Reusel-De Mierden wapen.svg
 | naam = Reusel-De Mierden
-| lokatie = NL_-_locator_map_municipality_code_GM1667_%282016%29.png
+| lokatie = NL - locator map municipality code GM1667 (2016)
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Reusel
 | öppervlakte = 78,66 
@@ -22,7 +22,7 @@
 '''Reusel - De Mierden''' (spreak uut: ''rösel de myrden'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et dorp [[Reusel]]. Der woanet 13.127 lüde up ne uppervlakde van 78,66 km². 
 
 Andere dörpe en kernen in de gemeynde sint Hooge Mierde, Hulsel en Lage Mierde.
- 
+
 == Uutgånde verwysing ==
 * [https://www.reuseldemierden.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
