--- a/Podcast.mw
+++ b/Podcast.mw
@@ -1,8 +1,10 @@
-Nen '''podcast''' is ne gelüüdsupname wat oaver [[internet]] belüsterd worden kan. De geluudsupname kan en [[radio]]programma weasen, mär ouk vöäredragene korte verhalen kummet vöär.
+Nen '''podcast''' is ne gelüüdsupname wat oaver [[internet]] of up nen gelüüdsdraeger belüsterd worden kan. De upname kan en [[radio]]programma weasen, mär ouk vöäredragene korte verhalen kummet vöär.
 
 De uutsendingen untstünden do as et [[Vereynigde Ståten|amerikaanske]] technologybedryv Apple de eyrste digitale geluudsdraeger, de iPod, up de markt brachten. Et woord ''Podcast'' is dan ouk ne samenstelling van [[iPod]] en et [[engels]]ke ''broadcast'' (uutsending). Oarsprungelik was de bedoling üm nen podcast up nen iPod of anderen geluudsdraeger te setten, sou dat den tohöyrder der up eygene tyd en wyse når lüsteren kunde. Rechtevoord sint vöäle podcasts ouk rechtstreyks oaver internet te ströymen en hoovt se neet meyr eyrst binnenehaald te worden.
 
-In nen podcast kan et oaver van allens en noch wat gån. Et hangt der mär net vanaf wat den uprichter der van maket. Ouk mag de makers heylemål selv weaten wo vake se der eyne maket en wo lange as ne upname duurt. Mangs drait nen podcast üm gesprekken med gäste, mangs is der en vast koppel lüde wat et an mekander küret, mär ouk lüde dee as ne ård kolumn-achtige podcasts maket. Wat podcasts wordet vulleydig improviseerd, anderen volget en strak uuteskreaven verhaal.
+In nen podcast kan et oaver van allens en noch wat gån. Et hangt der mär net vanaf wat den uprichter der van maket. Ouk magt de makers heylemål selv weaten wo vake se der eyne maket en wo lange as ne upname duurt. Mangs drait nen podcast üm gesprekken med gäste, mangs is der en vast koppel lüde wat et an mekander küret, mär ouk lüde dee as ne ård kolumn-achtige podcasts maket. Wat podcasts wordet vulleydig improviseerd, anderen volget en strak uuteskreaven verhaal. Mangs is nen podcast bedoold üm anderen wat by te brengen, mangs ouk gewoan vöär de wille.
+
+Gröttere podcasts kryget geld van bedryve üm underwyl reklame te maken. Dårmed kan et ne inkumstenbrunne weasen vöär de makers.
 
 Med de kumst van de [[smartphone|klookfoon]] en ströymingsdeenste as [[Spotify]] en [[iTunes]] is podcasten en podcast lüsteren en populäär tydverdryv ewörden. In et neadersassiske gebeed sint verskeidene podcasts te belüsteren. Seet dårvöär de lyste van [[Nedersaksische podcasts|neadersassiske podcasts]].
 
