--- a/Roosendaal.mw
+++ b/Roosendaal.mw
@@ -19,7 +19,7 @@
 | webstie = [http://www.roosendaal.nl/ www.roosendaal.nl]
 }}
 
-'''Roosendaal''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[NAAM]]. Der woanet 77.201 lüde up ne uppervlakde van 107,16 km². 
+'''Roosendaal''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is de lyknamige stad [[Roosendaal]]. Der woanet 77.201 lüde up ne uppervlakde van 107,16 km². 
 
 Andere dörpe en kernen in de gemeynde sint:
 * [[Akker (Roosendaal)|Akker]]
