*Empty MediaWiki Message*

--- a/Roosendaal.mw
+++ b/Roosendaal.mw
@@ -21,7 +21,9 @@
 
 '''Roosendaal''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is de lyknamige stad [[Roosendaal]]. Der woanet 77.201 lüde up ne uppervlakde van 107,16 km². 
 
-Andere dörpe en kernen in de gemeynde sint:
+Andere dörpe en kernen in de gemeynde sint Wouw, Heerle, Nispen, Wouwse Plantage en Moerstraten.
+
+Nåberskoppen sint:
 * [[Akker (Roosendaal)|Akker]]
 * [[Boeiink]]
 * [[Borteldonk]]
@@ -34,7 +36,6 @@ Andere dörpe en kernen in de gemeynde sint:
 * [[Heijbeek]]
 * [[Hoevestein]]
 * [[Hollandsdiep]]
-| valign=top |
 * [[Hulsdonk (Roosendaal)|Hulsdonk]]
 *[[Kruisstraat (Roosendaal)|Kruisstraat]]
 * [[Nieuwenberg]]
