--- a/Rucphen_(gemeynde).mw
+++ b/Rucphen_(gemeynde).mw
@@ -11,7 +11,7 @@
 | inwonners = 23.081
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 358 
-| breedtegroad = 51/31/55/N,
+| breedtegroad = 51/31/55/N
 | lengtegroad = 4/33/36/E
 | verkeersoader = A58
 | netnummer = 0165
@@ -21,7 +21,7 @@
 
 '''Rucphen''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[Rucphen]]. Der woanet 23.081 lüde up ne uppervlakde van 64,48 km². 
 Andere dörpe en kernen in de gemeynde sint Schijf, Sprundel, St. Willebrord en Zegge.
- 
+
 == Uutgånde verwysing ==
 * [https://www.rucphen.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
