*Empty MediaWiki Message*

--- a/Nedersaksische_podcasts.mw
+++ b/Nedersaksische_podcasts.mw
@@ -15,7 +15,7 @@
 * De riegen '''Schölers leest Platt''' en '''SPRAAK!''' wördt deur de Schleswig-Holsteinischer Heimatbund anebeuden op audio-uutzeiingsplatform [[Soundcloud]]. De podcast SPRAAK!, begünd op 9 september 2020, dreit um Platduutse cultuur in Sleeswiek-Holstien en wördt prissenteerd deur Jan Graf.
 
 * Onder de titel '''Platt Land Kind''' zet MissLawlHey, een jonge vrouwe uut [[Oostfrieslaand]], körte humoristische filmpies in 't [[Oostfreisk Nederduutsk|Platduuts van Oostfrieslaand]] op YouTube. Vake behandelt ze plattelaandsonderwarpen of gef ze uutleg aover 't Platduuts. De Platduutstalige filmpies wördt sinds 2015 anebeuden.
-*Praot Drents Met Mij is een podcast die op 3 meert 2020 begunnen isse. In de podcast prat Renate Snoeijing mit Drenten over wat et [[Drèents]] veur hun betekent.
+*'''Praot Drents Met Mij''' is een podcast die op 3 meert 2020 begunnen isse. In de podcast prat Renate Snoeijing mit Drenten over wat et [[Drèents]] veur hun betekent.
 
 ==Uutgaonde verwiezings==
 *[https://www.youtube.com/channel/UCJrMRbrz7uVHG0MHq5B0dPA YouTube-kenaal van Wearldspråke Podcast]
