--- a/Kim_Kardashian.mw
+++ b/Kim_Kardashian.mw
@@ -4,9 +4,11 @@
  
 De lätste jåren bouwden Kim Kardashian stelselmåtig ne [[online]] en [[sociale media]]-anweasigheid up. See bereikeden dårmed hunderden miljonen volgers up [[Twitter]] en [[Instagram]].<ref>[http://www.etonline.com/news/160473_kim_kardashian_on_the_success_of_her_mobile_app_and_her_social_media_empire/ ET Online. Seemayer, Zach. "Kim Kardashian on the Success of Her Mobile App and Her Social Media Empire". etonline.com.] Bekeaken up 11 juni 2016.]</ref><ref>[https://socialblade.com/instagram/top/100/followers socialblade.com. "Top 100 Instagram Users by Followers".]</ref> Se hevt verskeidene produkte med öären naam der up uutegeaven, so as et [[app|mobile spelleke]] ''Kim Kardashian: Hollywood'', ne ryge an kleyder en produkten, een fotobook under de name ''Selfish'' en ne persöynlike app med öäre naam.
 
-Dårnöäst krigt öäre verholding med den [[hiphop|räpper]] [[Kanye West]] vöäle media-andacht. Et stel trouwden in [[2014]] en hebbet med mekander veer kinder.<ref>[https://www.nytimes.com/2015/04/10/t-magazine/kanye-west-adidas-yeezy-fashion-interview.html?_r=0 Caramanica, Jon.. "The Agony and the Ecstasy of Kanye West."] ''[[New York Times]]''. 10 april 2015.</ref> Kardashian hevt mededåne in films so as ''Disaster Movie'' ([[2008]]), ''[[Deep in the Valley]]'' (2009) en ''[[Temptation: Confessions of a Marriage Counselor]]'' (2013).
+Dårnöäst krigt öäre verholding med den [[hiphop|räpper]] [[Kanye West]] vöäle media-andacht. Et stel trouwden in [[2014]] en hevt med mekander veer kinder.<ref>[https://www.nytimes.com/2015/04/10/t-magazine/kanye-west-adidas-yeezy-fashion-interview.html?_r=0 Caramanica, Jon.. "The Agony and the Ecstasy of Kanye West."] ''[[New York Times]]''. 10 april 2015.</ref> Up 22 februari 2021 wör bekend at Kardashian ne skeiding van West had anevrågen.<ref>[https://nos.nl/artikel/2369449-kim-kardashian-vraagt-officieel-echtscheiding-van-kanye-west-aan.html Nos.nl. "Kim Kardashian Vraagt Officieel Echtscheiding van Kanye West Aan". 19. february 2021. 5 määrt 2021.]</ref> 
 
-Volgens et tydskrivt ''[[Time (tydskrivt)|Time]]'' was Kardashian in 2015 eyne van de [[Time 100|100 meyst invloodryke lüde]],<ref>[http://www.inc.com/business-insider/elon-musk-explains-the-genius-of-kanye-west.html "Elon Musk Explains the Genius of Kanye West". 17 April 2017.] Bekeaken up 19 july 2016.</ref> en ''[[Vogue Magazine|Vogue Australie]]'' beskreav öär as "fenomeen van de popkultuur".<ref>[http://www.vogue.com.au/fashion/news/first+look+kim+kardashian+covers+vogue+australias+june+2016+issue+,39109 Staff. "First Look: Kim Kardashian covers Vogue Australia's June 2016 issue". Vogue Australia. Bekeaken up 12 juni 2016. Skreaven up 8 mei 2016.</ref> Sowal vöär- as teagenstanders nöömt öär een vöärbeald van ymand den as "bekend is ümdat he bekend is".<ref>[https://web.archive.org/web/20120528065137/http://www.scoreboard-media.com/paris-hilton-rule/ (ARchiveerd) Scoreboard Media Group. The Paris Hilton Rule: Famous For Being Famous. Bekeaken up 13 september 2014.]</ref><ref>[http://www.wetpaint.com/sure-shes-beautiful-but-why-is-kim-kardashian-famous-697080/ Wet Paint.com."Sure, She's Beautiful, but Why is Kim Kardashian Famous? Skreaven up 9 november 2013.]</ref> Volgens Forbes was see de best-betaalde televisy-persöynlikheid van 2015, med een inskatted inkoamen van sowat € 50 miljoon.<ref>[https://www.forbes.com/profile/kim-kardashian/ "Kim Kardashian"] Bekeaken up 6 december 2015.</ref>
+Kardashian hevt mededån in films sou as ''Disaster Movie'' ([[2008]]), ''[[Deep in the Valley]]'' (2009) en ''[[Temptation: Confessions of a Marriage Counselor]]'' (2013).
+
+Volgens et tydskrivt ''[[Time (tydskrivt)|Time]]'' was Kardashian in 2015 eyne van de [[Time 100|100 meyst invloodryke lüde]],<ref>[http://www.inc.com/business-insider/elon-musk-explains-the-genius-of-kanye-west.html "Elon Musk Explains the Genius of Kanye West". 17 April 2017.] Bekeaken up 19 july 2016.</ref> en ''[[Vogue Magazine|Vogue Australie]]'' beskreav öär as "fenomeen van de popkultuur".<ref>[http://www.vogue.com.au/fashion/news/first+look+kim+kardashian+covers+vogue+australias+june+2016+issue+,39109 Staff. "First Look: Kim Kardashian covers Vogue Australia's June 2016 issue". Vogue Australia. Bekeaken up 12 juni 2016. Skreaven up 8 mei 2016.</ref> Souwal vöär- as teagenstanders nöömt öär en vöärbeald van ymand den as "bekend is ümdat he bekend is".<ref>[https://web.archive.org/web/20120528065137/http://www.scoreboard-media.com/paris-hilton-rule/ (ARchiveerd) Scoreboard Media Group. The Paris Hilton Rule: Famous For Being Famous. Bekeaken up 13 september 2014.]</ref><ref>[http://www.wetpaint.com/sure-shes-beautiful-but-why-is-kim-kardashian-famous-697080/ Wet Paint.com."Sure, She's Beautiful, but Why is Kim Kardashian Famous? Skreaven up 9 november 2013.]</ref> Volgens Forbes was see de best-betaalde televisy-persöynlikheid van 2015, med een inskatted inkoamen van sowat € 50 miljoon.<ref>[https://www.forbes.com/profile/kim-kardashian/ "Kim Kardashian"] Bekeaken up 6 december 2015.</ref>
 
 <references/>
 
