--- a/Kim_Kardashian.mw
+++ b/Kim_Kardashian.mw
@@ -4,7 +4,7 @@
  
 De lätste jåren bouwden Kim Kardashian stelselmåtig ne [[online]] en [[sociale media]]-anweasigheid up. See bereikeden dårmed hunderden miljonen volgers up [[Twitter]] en [[Instagram]].<ref>[http://www.etonline.com/news/160473_kim_kardashian_on_the_success_of_her_mobile_app_and_her_social_media_empire/ ET Online. Seemayer, Zach. "Kim Kardashian on the Success of Her Mobile App and Her Social Media Empire". etonline.com.] Bekeaken up 11 juni 2016.]</ref><ref>[https://socialblade.com/instagram/top/100/followers socialblade.com. "Top 100 Instagram Users by Followers".]</ref> Se hevt verskeidene produkte med öären naam der up uutegeaven, so as et [[app|mobile spelleke]] ''Kim Kardashian: Hollywood'', ne ryge an kleyder en produkten, een fotobook under de name ''Selfish'' en ne persöynlike app med öäre naam.
 
-Dårnöäst krigt öäre verholding med den [[hiphop|räpper]] [[Kanye West]] vöäle media-andacht. Et stel trouwden in [[2014]] en hevt med mekander veer kinder.<ref>[https://www.nytimes.com/2015/04/10/t-magazine/kanye-west-adidas-yeezy-fashion-interview.html?_r=0 Caramanica, Jon.. "The Agony and the Ecstasy of Kanye West."] ''[[New York Times]]''. 10 april 2015.</ref> Up 22 februari 2021 wör bekend at Kardashian ne skeiding van West had anevrågen.<ref>[https://nos.nl/artikel/2369449-kim-kardashian-vraagt-officieel-echtscheiding-van-kanye-west-aan.html Nos.nl. "Kim Kardashian Vraagt Officieel Echtscheiding van Kanye West Aan". 19. february 2021. 5 määrt 2021.]</ref> 
+Dårnöäst krigt öäre verholding med den [[hiphop|räpper]] [[Kanye West]] vöäle media-andacht. Et stel trouwden in [[2014]] en hevt med mekander veer kinder.<ref>[https://www.nytimes.com/2015/04/10/t-magazine/kanye-west-adidas-yeezy-fashion-interview.html?_r=0 Caramanica, Jon.. "The Agony and the Ecstasy of Kanye West."] ''[[New York Times]]''. 10 april 2015.</ref> Up den 19. februari 2021 wör bekend at Kardashian ne skeiding van West had anevrågen.<ref>[https://nos.nl/artikel/2369449-kim-kardashian-vraagt-officieel-echtscheiding-van-kanye-west-aan.html Nos.nl. "Kim Kardashian Vraagt Officieel Echtscheiding van Kanye West Aan". 19. february 2021. 5 määrt 2021.]</ref> 
 
 Kardashian hevt mededån in films sou as ''Disaster Movie'' ([[2008]]), ''[[Deep in the Valley]]'' (2009) en ''[[Temptation: Confessions of a Marriage Counselor]]'' (2013).
 
