--- a/Metje_Blaak.mw
+++ b/Metje_Blaak.mw
@@ -1,3 +1,4 @@
+[[Bestaand:Metje Blaak - 2016.jpg|duum|Metje Blaak, 2016]]
 '''Metje Blaak''' ([[Almelo]], [[1949]]) is ne skryvster, fotografe, filmmaakster, spotprentenmaakster, modellenupmaakster, artiste en old-hure(nmadam). See woant rechtevoord in [[Amsterdam]].
 
 Blaak begünde as 14-jöärig meydken te warken as naister in et [[linnengood|linnenfabrik]] van [[Almelo]]. See markeden at dat niks vöär öär was. Nå wat ümswarvingen en ne bane in et sekenhuus beslöät see as hure te gån warken. Sou köäm see up de amsterdamske [[Wallen]] terechte. In dee ümstandigheid untdekkeden see wo slim et med de rechten van huren esteld was. Dårümme richteden see de belangenvereyniging ''De Rode Draad'' up. Ouk skreav see ''Witboek - Handboek voor sekswerkers'' oaver wo as sekswarkers selv de geldsaken köänet regelen en in ''De trukendoos'' gevt see warktips vöär huren, uut eygen ervaring. In et [[VPRO]]-programma ''Profiel'' vertelden see dat med de kumst van et internet et pleseer en de romantik van et hurenbestån vord is en dat see der dårümme med uuteskeiden is.
