*Empty MediaWiki Message*

--- a/Sint-Michielsgestel.mw
+++ b/Sint-Michielsgestel.mw
@@ -2,7 +2,7 @@
 | bestaandsnaam vlagge = Flag_of_Sint-Michielsgestel.svg 
 | bestaandsnaam woapn = Sint-Michielsgestel_wapen.svg
 | naam = Sint-Michielsgestel (Sünte Michielsgästel)
-| lokatie = LocatieSintMichielsgestel
+| lokatie = LocatieSint-Michielsgestel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Sünte Michielsgästel
 | öppervlakte = 59,34 
@@ -12,7 +12,7 @@
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 506 
 | breedtegroad = 51/38/35/N 
-| lengtegroad = 5/21/32/OL
+| lengtegroad = 5/21/32/E
 | verkeersoader = A2, N279
 | netnummer = 073
 | postkode = 5258, 5270-5275, 5290-5294
