*Empty MediaWiki Message*

--- a/Miegamp.mw
+++ b/Miegamp.mw
@@ -39,7 +39,7 @@ t Woord ''eemt{{small()|e}}'', ''{{small()|i}}empe'' of variaanten daorvan koeme
 ** ''Iemeck''
 ** ''Pissmier''
 ** ''Sprockimm''
-* [[Sallaans]]: ''empe'' ([[Zwols]]), "miegemp"
+* [[Sallaans]]: ''empe'', ''miegemp(e)'', ''miere.''
 * [[Stellingwarfs]]: ''mieghimmel''
 * [[Tweants]]: ''miegemp'', ''miegeamp''
 * [[Veluws]]: 
