*Empty MediaWiki Message*

--- a/Middelsassisk.mw
+++ b/Middelsassisk.mw
@@ -27,7 +27,7 @@
 [[File:Bugenhagen Kirchenordnung HL.jpg|thumb|''Der Keyserliken Stadt Lübeck Christlike Ordeninge/ tho denste dem hilgen Evangelio/ Christliker leve/ tucht/ frede unde enicheyt/ vor de yöget yn eyner guden Schole[n] tho lerende. Unde de Kercken denere und rechten armen Christlick tho vorsorgende. Dorch Jo. Bugen. Pom. beschreven. 1531''. Oaversetting: "De keiserlike stad [[Lübeak]]s christelike orde, ten deenste van et Heilige Evangely, christelike leaven, tücht, vreade en eynheid, üm de jöägd in een gode skole te låten leyren, en de deenders van de karke en rechtvaardige armen christelik te versörgen. Eskreaven döär [[Johannes Bugenhagen]] de pommer, 1531"]]
 [[File:Reynke-de-Vos Vorrede.jpg|thumb|''Eyne vorrede ouer dyt boek van reynken deme vosse''. Oaversetting: "Een vöärreade (vöärwoord) oaver dit book van [[Reinke de Vos]]". ''Reinke de Vos'' is een allegorisk epos dat populäär was in Europa in de middeleywen. Dit kümt üüt de üütgåve van 1498, üütegeaven in [[Lübeak]], eyn van de belangrykste hansestäden. Et lettertype is kenmarkend vöär et [[gotisk skrivt]] dat in middelsassisk drukwark gebrüked wördde.]]
 
-'''Middelsassisk''' (eigenname: ''sassisch''<ref>Lasch, Agathe (1914). Mittelniederdeutsche Grammatik. Halle/Saale: Niemeyer. p. 5.</ref><ref>[https://www.koeblergerhard.de/mnd/mnd_s.html Köbler, Gerhard (2014). "sassisch". Mittelniederdeutsches Wörterbuch (3. üütgåve). Bekeaken: december 2019.]</ref>) is een untwikkelingsfase van et [[Nedersaksisch|neadersassisk]]. Et is in de [[middelieuwen|middeleywen]] untstån üüt et [[oldsassisk]] en is skrivtelik vasteleagd vanaf 1225/1234 (''[[Saksenspiegel|Sassenspegel]]''). In de tyd van de [[Hanze|Hanse]] (vanaf ungeväär 1300 tot 1600), was et middelsassisk de belangrykste eskreaven språke in et noorden van [[Centraol-Europa|Middeneuropa]] en deende as [[lingua franca]] in et [[Noord-Europa|Noordeuropa]]. Et wördde parallel an et middeleywske [[latyn]] gebrüked, ouk vöär [[diplomaty|diplomatike doolenden]] en in [[oorkunde]]s.<ref>Cordes, Gerhard; Möhn, Dieter (1983). Handbuch zur niederdeutschen Sprach- und Literaturwissenschaft. Erich Schmidt Verlag. bls. 119. ISBN 3-503-01645-7.</ref>
+'''Middelsassisk''' (eigenname: ''sassisch''<ref>Lasch, Agathe (1914). Mittelniederdeutsche Grammatik. Halle/Saale: Niemeyer. p. 5.</ref><ref>[https://www.koeblergerhard.de/mnd/mnd_s.html Köbler, Gerhard (2014). "sassisch". Mittelniederdeutsches Wörterbuch (3. üütgåve). Bekeaken: december 2019.]</ref>, ouk ''Dǖdisch'', ''Nedderlendisch en'' ''Ôstersch'') is een untwikkelingsfase van et [[Nedersaksisch|neadersassisk]]. Et is in de [[middelieuwen|middeleywen]] untstån üüt et [[oldsassisk]] en is skrivtelik vasteleagd vanaf 1225/1234 (''[[Saksenspiegel|Sassenspegel]]''). In de tyd van de [[Hanze|Hanse]] (vanaf ungeväär 1300 tot 1600), was et middelsassisk de belangrykste eskreaven språke in et noorden van [[Centraol-Europa|Middeneuropa]] en deende as [[lingua franca]] in et [[Noord-Europa|Noordeuropa]]. Et wördde parallel an et middeleywske [[latyn]] gebrüked, ouk vöär [[diplomaty|diplomatike doolenden]] en in [[oorkunde]]s.<ref>Cordes, Gerhard; Möhn, Dieter (1983). Handbuch zur niederdeutschen Sprach- und Literaturwissenschaft. Erich Schmidt Verlag. bls. 119. ISBN 3-503-01645-7.</ref>
 
 ==Terminology==
 Howel ''middelsassisk'' (MS) een puur akademiske term is dee eyrst later tot stand eköämen is, verweasen spreakers in dee tyd höyvdsakelik nå höär eigen språke as ''sassisch'' (sassisk) of ''sassische sprāke'' (sassiske språke). Disse terminology was ouk noch in gebrüük in de tyd van [[Maarten Luther|Luther]] in de angrensende [[middeldüütsk]]spreakende gebeden.<ref> Bischoff, Karl (1967). Sprache und Geschichte an der mittleren Elbe und unteren Saale (in German). Köln. p. 243f. Luther hat sich nicht als Meißner, was im heutigen Sprachgebrauch Obersachse wäre, und nicht als Thüringer gefühlt: ‚Sonst bin ich keiner nation so entgegen als Meichsnern vnd Thoringen. Ich bin aber kein Thoring, gehöre zun Sachsen‘, hat er einmal bei Tische betont. Und er scheint noch in späteren Jahren des Niederdeutschen mächtig gewesen zu sein, in [Johann] Aurifabers Aufzeichnungen vom Februar 1546 heißt es: ‚Zu dem sagete der Doctor von Wücherern, daß man jtzt spreche in Sachsen: Wer sägt, dat Wucher Sünde si, / Die hefft kein Geld, dat gläube fri. Aber ich Doctor Luther sage dagegen: Wer sägt, dat Wucher kein Sünde si, / Die hefft kein Gott, dat gläube nur fri.</ref> De latynske teagenhanger (''saxonicus'') wördde ouk gebrüked vöär de sassiske språke (nåst een antal andere beteykenissen).<ref>[https://reader.digitale-sammlungen.de/resolve/display/bsb10184846.html Chyträus, Nathan (1582). Nomenclator latino-saxonicus. Rostock. Bekeaken: määrt 2019.]</ref><ref>[https://reader.digitale-sammlungen.de/resolve/display/bsb10196346.html  Biblia sacra, Ebraice, Chaldaice, Graece, Latine, Germanice, Saxonice. [...]. Nürnberg: Elias Hutter & Katharina Dietrich. 1599. Bekeaken: määrt 2019.]</ref> De [[Nederlaans|neaderlandske]] en [[Nederlaands-Nedersaksisch|neaderlandsk-sassiske]] form ''Saksisch'', mid k, is möägelik untleynd an disse üütheymske latynske form, een andere möägelikheid is et [[standarddüütsk]]e ''sachse/sächsich''. Een antal språken van wee et eyrste kontakt mid de sassiskspreakende [[Saksen (vôlk)|sassen]] was, nammen de name oaver mär kreyg de beteykenisse '[[düütsk]]', bv. et [[fins]]ke ''saksa'', wat düütsk beteykent.
