--- a/Emden.mw
+++ b/Emden.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Wappen Emden.svg|right|thumb|t Emder woapen: ''Dat Engelke up de Muer]]
+[[Ofbeelding:DEU Emden COA.svg|right|thumb|t Emder woapen: ''Dat Engelke up de Muer]]
 [[Ofbeelding:Emden city hall.jpg|thumb|upright|Emden]]
 '''Emden''' is n houvenstad in de [[Duutslaand|Duutske]] bondesland [[Nedersaksen]] in [[Oostfraislaand|Oostfreisland]]. t Is n ''kreisfreie stadt'', dat heit n stad dij neit bie n zeker kraits heurt.
 
