--- a/Sint-Michielsgestel.mw
+++ b/Sint-Michielsgestel.mw
@@ -1,7 +1,7 @@
 {{Gemeante
 | bestaandsnaam vlagge = Flag_of_Sint-Michielsgestel.svg 
 | bestaandsnaam woapn = Sint-Michielsgestel_wapen.svg
-| naam = Sint-Michielsgestel (Sünte Michielsgästel)
+| naam = Sint-Michielsgestel
 | lokatie = LocatieSint-Michielsgestel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Sünte Michielsgästel
@@ -21,7 +21,7 @@
 
 '''Sint-Michielsgestel''' (Sünte Michielsgästel) is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et lyknamige [[Sint-Michielsgestel (dorp)|Sünte Michielsgästel]]. Der woanet 29.512 lüde up ne uppervlakde van 59,34 km². 
 Andere dörpe en kernen in de gemeynde sint Berlicum, Den Dungen en Gemonde. Andere nåberskappen sint Beekveld, Berlicum, Besselaar, De Bus, Doornhoek, Haanwijk, Halder, De Hogert, De Loofaert, Den Dungen, Gemonde, Heikantse Hoeve, Hersend, Heult, Hezelaar, Hoek, Horzik, Kerkeind, Laar, Maaskantje, Middelrode, Nijvelaar, Plein, Poeldonk, Ruimel, Tielse Hoeve, Wielsche Hoeven, Wamberg en Woud.
- 
+
 == Uutgånde verwysing ==
 * [https://www.sintmichielsgestel.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
