--- a/Son_en_Breugel.mw
+++ b/Son_en_Breugel.mw
@@ -1,8 +1,8 @@
 {{Gemeante
 | bestaandsnaam vlagge = Son_en_Breugel_vlag.svg 
-| bestaandsnaam woapn =  Son_en_Breugel_wapen.svg
+| bestaandsnaam woapn = Son_en_Breugel_wapen.svg
 | naam = Son en Breugel
-| lokatie = LocatieSonenBreugel
+| lokatie = LocatieSonEnBreugel
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Son
 | öppervlakte = 26,51 
@@ -13,13 +13,13 @@
 | dichtheid = 676 
 | breedtegroad = 51/30/58/N
 | lengtegroad = 5/30/7/E
-| verkeersoader =  A50
+| verkeersoader = A50
 | netnummer = 0499
-| postkode = 5690-5694	
+| postkode = 5690-5694
 | webstie = [http://www.sonenbreugel.nl/ www.sonenbreugel.nl]
 }}
 
-'''Son en Breugel''' (''Sun en Bröägel) is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[son (dorp)|Son]]. Der woanet 17.553 lüde up ne uppervlakde van 26,51 km². De gemeynde Son en Breugel besteyt enkel uut de twey kernen Son en Breugel.
+'''Son en Breugel''' (''Sun en Bröägel'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[son (dorp)|Son]]. Der woanet 17.553 lüde up ne uppervlakde van 26,51 km². De gemeynde Son en Breugel besteyt enkel uut de twey kernen Son en Breugel.
 
 == Uutgånde verwysing ==
 * [https://www.sonenbreugel.nl/ Officiele gemeyndewebsteade]
