*Empty MediaWiki Message*

--- a/Steenbargen.mw
+++ b/Steenbargen.mw
@@ -1,7 +1,7 @@
 {{Gemeante
 | bestaandsnaam vlagge = Flag_of_Steenbergen.svg
 | bestaandsnaam woapn =  Steenbergen_gemeentewapen.svg
-| naam = Steenbergen (Steynbargen)
+| naam = Steenbergen
 | lokatie = LocatieSteenbergen
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = [[Steynbargen (Noordbråbant)|Steynbargen]]
@@ -21,7 +21,7 @@
 
 '''Steenbergen''' (ver[[neadersassisk]]ed: ''Steynbargen'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is de stad [[Steenbergen (stad)|Steynbargen]]. Der woanet 24.304 lüde up ne uppervlakde van 159,14 km². 
 Andere dörpe en kernen in de gemeynde sint De Heen, Dinteloord, Kruisland en Nieuw-Vossemeer.
- 
+
 == Uutgånde verwysing ==
 * [https://www.gemeente-steenbergen.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
