--- a/Söökmachine.mw
+++ b/Söökmachine.mw
@@ -5,3 +5,7 @@ Woneyr y ne sökterme invoort, kryg y allerlei sökresultåten. Våke bünt de s
 ==Sökupdracht en sökwoord==
 Ne sökterme kan underskeyden wörden in nen sökupdracht, nen antal wöörden ov nen heylen sin en in nen sökwoord, wår slechts eyn woord ov såmenvattende stekwöörden wördet inevoord.[https://www.webton.nl/blog/verschil-tussen-zoekopdrachten-en-zoekwoorden/ 1]. Gebrukers van de sökmachine måkt gebruuk van sökupdrachten, online marketeers gebruukt sökwöörden.
 {{Dialekt|act}}
+[[Kategorie:Komputer]]
+[[Kategorie:Internet]]
+[[Kategorie:Sökmachine]]
+[[Kategorie:Toopassing]]
