--- a/Nedersaksiese_komputertermen.mw
+++ b/Nedersaksiese_komputertermen.mw
@@ -57,7 +57,7 @@ Overzichte van aofkortingen die'w in dit artikel gebruken:
 |-
 | bgcolor="honeydew" |zoekmachine
 | bgcolor="honeydew" |search engine
-|zeuk&shy;machine
+|[[Sökmachine|zeuk&shy;machine]]
 |zuuk&shy;masine (Drents oek: ''zeu(i)k-, zuik-, -maschine, -machien(e)'')
 |zuik&shy;mas(k)ien(e)
 |zeuk-, zuuk&shy;masine
