--- a/Nedersaksiese_komputertermen.mw
+++ b/Nedersaksiese_komputertermen.mw
@@ -122,7 +122,7 @@ Overzichte van aofkortingen die'w in dit artikel gebruken:
 | bgcolor="honeydew" |computer
 | bgcolor="honeydew" |computer
 |komputer (schertsend: knipper&shy;kiste)
-|komputer, rekener (schertsend: knipper&shy;kist{{small()|e}} [[Bestaand:Smile.png|10px|:-)]])
+|[[komputer]], rekener (schertsend: knipper&shy;kist{{small()|e}} [[Bestaand:Smile.png|10px|:-)]])
 |komputer, rekender
 |komputer, rekener (schertsend: knipper&shy;kist{{small()|e}} [[Bestaand:Smile.png|10px|:-)]])
 |
