--- a/Zouk_Machine.mw
+++ b/Zouk_Machine.mw
@@ -1,1 +1,12 @@
 '''Zouk Machine''' is nen geheyl uut vrouwlüde bestånden [[kompa]] ov [[zouk]] müsykgroop uut [[Guadeloupe]], den enkele internationåle hits hevt eskoord, vöärnåmelik in [[Frankryk]]. Zouk Machine is et meyst bekend van et nümmer [[Maldòn (la musique dans la peau)]] uut 1990, wat ouk de nåme van et album is. Et nümmer håleden under anderen in de franske SNEP Singles Chart de nümmer 1 positsy en wyr werldwyd meyr as 1 miljoon mål verkocht.
+
+== Geskydenis ==
+Zouk Machine wyr in 1986 uperichted döär de leden van [[Experience 7]], [[Guy Houiller]] en [[Yves Honoré]], en såmenestelled uut dree vrouwlüde uut Guadeloupe: [[Joëlle Ursull]], [[Christiane Obydol]] en [[Dominique Zorobabel]]. Et eyrsten album was ''Sové lanmou,'' eskreaven döär Guy Houiller en Yves Honoré, broder en swåger van Christiane Obydol. Joëlle Ursull verleet den groop en ging vöär ne solokarriere. Sy wyr in 1990 tweyds up et [[Eurovisie Songfesitival]] med et leed ''<nowiki>''White and Black Blues''</nowiki>'', ecomponered döär [[Serge Gainsbourg]] en [[Sylvain Augier]].
+
+Begin jåren '90 kwam [[Jane Fostin]] by den groop. Öär single Maldòn wyr nen werldhit en stund 9 weaken up nümmer 1 in Frankryk. Den groop toureden verskeydene målen rund de werld en bracht twey albums uut: ''Sa ké cho'' en ''Clin d'œil.''
+
+In 1995 kwam den groop in ne krisis terechte en plåtenmåtskappy [[Sony BMG|BMG]] bracht ''Best of Zouk Machine'' uut. Jane Fostin verleet uutendelik den groop en begon ne solokarriere.
+
+== Eksterne links ==
+
+* Zouk Machine, chronology [https://www.etoile-productions.be/pzoukmachine.html Étoile-productions.be]
