--- a/Zouk_Machine.mw
+++ b/Zouk_Machine.mw
@@ -10,3 +10,5 @@ In 1995 kwam den groop in ne krisis terechte en plåtenmåtskappy [[Sony BMG|BMG
 == Eksterne links ==
 
 * Zouk Machine, chronology [https://www.etoile-productions.be/pzoukmachine.html Étoile-productions.be]
+
+[[Kategorie:Wikipedie:Gin Kattegerie]]
