/* Old- en Middelgrunnegs (Middel Leegduuts) */

--- a/Grunnegs.mw
+++ b/Grunnegs.mw
@@ -219,7 +219,7 @@ Om en bie [[1500]] begon t Grunnegs aal meer noar t Middelnederlaands te goan. M
 
 :"''Johan Breve, will ick dij segghenn, make du ons hijr gheen Drentenn, off ick will opstaenn unnde wijll dij op kolenn leggenn, Du solte Bartoldt voer een redge kennen unnde mij voir een overrechter. Doe sprack Johann Breve unnde seijde: Leve joncker Reloff, ick will mit mijn Joncker gheen doenn hebbenn.''"
 
-Hieroet bliekt ook dat aal loagen van de bevòlken doudestieds Grunnegs praiten. Roelof van Ewsum was noamelk ain van de (belaang-)(ienvloud-)riekste luu ien de haile provìnzie. Opvalend is dat de klanken ai en ou nog nait weergeven worden. Of zai wel oetsproken wörren is man nait wis over. Wel kin man zèggen dat de oetsproak van klanken en kombinoatsies doudestieds aans was as nou. De oe zol middelkerwies as [euw] oetsproken wèst wezen, ien tieds dat de u de tegenswoordege [oe] was. De ij was middelkerwies de tegenswoordege [ie] en eij was de tegenswoordege [ij] of [ai]. Hou of dat mit ee, aa en oo zat, is dus nait haildaal bekend. t Kin wezen, kiekend noar t Duutsege karakter van de schriefwieze, wat loat is veur dij periode, dat, liek as ien t Westfeels, de klanken ai en ou schreven wörren as ee en oo. Ien [[Muunster]]se stadsdokumìnten bieveurbeeld binnen veul Westfeelse teksten vonden dij ee en oo beschrieven, mòr woarvan man wait dat dij klanken as ij en ouw oetsproken wörren.
+Hieroet bliekt ook dat aal loagen van de bevòlken doudestieds Grunnegs proaten. Roelof van Ewsum was noamelk ain van de (belaang-)(ienvloud-)riekste luu ien de haile provìnzie. Opvalend is dat de klanken ai en ou nog nait weergeven worden. Of zai wel oetsproken wörren is man nait wis over. Wel kin man zèggen dat de oetsproak van klanken en kombinoatsies doudestieds aans was as nou. De oe zol middelkerwies as [euw] oetsproken wèst wezen, ien tieds dat de u de tegenswoordege [oe] was. De ij was middelkerwies de tegenswoordege [ie] en eij was de tegenswoordege [ij] of [ai]. Hou of dat mit ee, aa en oo zat, is dus nait haildaal bekend. t Kin wezen, kiekend noar t Duutsege karakter van de schriefwieze, wat loat is veur dij periode, dat, liek as ien t Westfeels, de klanken ai en ou schreven wörren as ee en oo. Ien [[Muunster]]se stadsdokumìnten bieveurbeeld binnen veul Westfeelse teksten vonden dij ee en oo beschrieven, mòr woarvan man wait dat dij klanken as ij en ouw oetsproken wörren.
 
 === Nijgrunnegs ===
 Dit [[Middelgrunnegs]] gong middelkerwies om en bie 1800 over ien t [[Nijgrunnegs]]. Dit is aans nait mit zekerhaid te zèggen. Ien de loate [[18. aiw]] was de Nederlaandse stoat laanksoam gruid noar grotere ainhaid. t Nederlaands haar nou ook al dudelk n vaste stoates kregen. Dit mouk de Grunnegers ook bewaiten van heur aigense streektoal en apaarte aigensheden. De Grunnegers begonnen laanksoam soamen tou goan. Woar doarveur de gemiddelde Ommelaander zok as Frais oetdrokte, vuilde man zok nou overaal Grunneger en was de Grunnegse toal n belaangriek dail doarien. Vanòf dij tied doekt t Grunnegs weer op ien schriften en wordt t schreven op n wieze dij verschillend was van t Nederlaands, ien tieds dat man ien de vrougere aiwen juust zo veul meugelk dezulfde letters veur zowel t Grunnegs as t Nederlaands broekte, dij ien baaide gevalen wel aans oetsproken wörren. Dit was nou dus veraanderd en nou kin man den ook dudelk zain hou t Grunnegs der ien dij tied oetzag en ook goud vaststellen hou of t klonken het. Deur dizze aandocht wait man vanòf dizze tied den ook t maist van t Grunnegs òf.
