--- a/Söökmachine.mw
+++ b/Söökmachine.mw
@@ -1,10 +1,10 @@
-Ne '''sökmachine''' is ne komputertoopassing wårmed y et [[internet]] künnet döärsöken. Der beståt meyrdere sökmachines up et [[world wide web|werldwyde web]], so as [[Google]], [[Yahoo]] en [[Bing]].
+Ne '''söökmachine''' is ne komputertopassing wårmed y et [[internet]] künnet döärsöken. Der beståt meyrdere söökmachines up et [[world wide web|werldwyde web]], sou as [[Google]], [[Yahoo]] en [[Bing]].
 
 ==Warking==
-Woneyr y ne sökterme invoort, kryg y allerlei sökresultåten. Våke bünt de sökresultåten eordened up relevantsy - in wo wyd de tekst van ne websteade oavereynkümmet med de sökterme -, mår sortering up båsis van dåtum kümmet ouk vöär. De sökresultåten bünt et gevolg van nen söktocht oaver et werldwyde web når passende websteades döär de sökmachine. Meystal wördet der ne vöärvertöyning van de websteades etöynd, wårmed de sökmachine ne beyld gevt van de evunden sökresultåten. 
+Woneyr y ne söökterme invoret, kryg y allerlei söökresultåten. Våke bünt de söökresultåten eordend up relevanty - in wo wyd de tekst van ne websteade oavereynkümt med de söökterme -, mår sortering up båsis van dåtum kümt ouk vöär. De söökresultåten bünt et gevolg van nen sööktocht oaver et werldwyde web når passende websteades döär de söökmachine. Meystal wördet der ne vöärvertöyning van de websteades etöynd, wårmed de söökmachine en beald gevt van de evunden söökresultåten.
 
-==Sökupdracht en sökwoord==
-Ne sökterme kan underskeyden wörden in nen sökupdracht, nen antal wöörden ov nen heylen sin en in nen sökwoord, wår slechts eyn woord ov såmenvattende stekwöörden wördet inevoord.[https://www.webton.nl/blog/verschil-tussen-zoekopdrachten-en-zoekwoorden/ 1]. Gebrukers van de sökmachine måkt gebruuk van sökupdrachten, online marketeers gebruukt sökwöörden.
+==Söökupdracht en söökwoord==
+Ne söökterme kan underskeyden wörden in nen söökupdracht, en antal wöörden of nen heylen sin en in en söökwoord, wår slechts eyn woord of såmenvattende stekwöörden wördet inevoord.[https://www.webton.nl/blog/verschil-tussen-zoekopdrachten-en-zoekwoorden/ 1]. Gebrukers van de söökmachine måket gebruuk van sökupdrachten, online marketeers gebruket söökwöörden.
 
 {{Dialekt|act}}
 
