--- a/Broenswiek_(stad).mw
+++ b/Broenswiek_(stad).mw
@@ -2,7 +2,7 @@
 ! Woapen 
 ! Koart
 |- style="background: #ffffff; text-align: center;"
-| style="width: 145px;" | [[Ofbeelding:Brunswick Coat of Arms.png|140px|Woapen van Broenswiek]]
+| style="width: 145px;" | [[Ofbeelding:DEU Braunschweig COA.svg|140px|Woapen van Broenswiek]]
 | style="width: 145px;" | [[Ofbeelding:Lage der kreisfreien Stadt Braunschweig in Deutschland.PNG|140px|Liggen van Broenswiek]]
 |-
 ! colspan="2" | Boasisgegevens
