*Empty MediaWiki Message*

--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -26,7 +26,9 @@
 ***[[West-Germaans]]  
 ****[[Nederduuts]]
 ****[[Nedersaksisch]] 
-*****Sallaands
+*****[[Nederlaands-Nedersaksisch]]
+******[[Gelders-Oaveriessels]]
+*******Sallaands
 |-
 |Schrift
 |'t [[Latainse alfabet|Latiense alfabet]]
