--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -14,7 +14,7 @@
 |Gelderlaand, Oaveriessel en een diel van Dreanthe
 |-
 |Antal sprekkers
-|291.561 (thuus). 338.378 (totaol)<ref>Taaltelling Nedersaksisch (2005)</ref><ref>Excl. Sallaands gebied in Dreanthe, Tweante en Gelderlaand. Incl Zuud-Dreants gebied in Oaveriessel, Stellingwärfs gebied ten zuden van Stienwiekerlaand en dielen van het Tweants</ref>
+|291.561 (thuus). 338.378 (totaal)<ref>Taaltelling Nedersaksisch (2005)</ref><ref>Excl. Sallaands gebied in Dreanthe, Tweante en Gelderlaand. Incl Zuud-Dreants gebied in Oaveriessel, Stellingwärfs gebied ten zuden van Stienwiekerlaand en dielen van het Tweants</ref>
 |-
 |Dialecten
 |Stadsdialecten: [[Zwols]], [[Kampers]] en [[Deamters]]
@@ -46,7 +46,7 @@
 |''sdz''
 |}
 [[Bestaand:Sallaans.png|thumb|300px|t Sallaandse täälgebied]]
-t '''Sallaands''' is n [[Nedersaksies]]e [[dialekt]]groep in de regio [[Sallaand]] in t westen van de [[Nederlaand]]se provinsie [[Oaveriessel|Overiessel]]. In de dörpen [[Heldern|Ellendoorn]], [[Nijverdal]] en [[Hooltn|Olten]] die vandäge de dag n nauwe baand mit [[Tweante|Twente]] ebben, praoten ze n Sallaands-Twents overgaanksvariaant. Värder praoten ze in [[Kampen (Overiessel)|Kampen]] en in de umgeving van Kampen ok Sallaands. De streektaal in de [[Kop van Overiessel]] wördt onder t [[Stellingwarfs]] erekend.
+t '''Sallaands''' is n [[Nedersaksies]]e [[dialekt]]groep in de regio [[Sallaand]] in t westen van de [[Nederlaand]]se provinsie [[Oaveriessel|Overiessel]]. In de dörpen [[Heldern|Ellendoorn]], [[Nijverdal]] en [[Hooltn|Olten]] die vandäge de dag n nauwe baand mit [[Tweante|Twente]] ebben, praoten ze n Sallaands-Twents overgaanksvariaant. Värder praot ze in [[Kampen (Overiessel)|Kampen]] en in de umgeving van Kampen ok Sallaands. De streektaal in de [[Kop van Overiessel]] wördt onder t [[Stellingwarfs]] erekkend.
 
 t Sallaands ef veural veule overienkomsten mit t [[Oost-Veluws]] en t [[Drèents|Drents]] en in mindere maoten mit t [[Stellingwarfs]], [[Urkers]] en [[West-Veluws]]. t Sallaands is beheurlik beïnvloed deur t [[Nederlaands|Ollaands]], n invloed die naor t oosten toe dudelik minder wört. Daor leg t grote verskil mit t veul be-ollenere [[Tweants|Twents]]. [[Raolte]] legt midden in t Sallaandse täälgebied. t Dialekt mit t grootste antal sprekers is t [[Zwols]]. t Sallaands ef de [[ISO 639]]-3-kode '''sdz'''.
 
