--- a/Zouk_Machine.mw
+++ b/Zouk_Machine.mw
@@ -1,4 +1,4 @@
-'''Zouk Machine''' is nen geheyl uut vrouwlüde bestånden [[kompa]] ov [[zouk]] müsykgroop uut [[Guadeloupe]], den enkele internationåle hits hevt eskoord, vöärnåmelik in [[Frankryk]]. Zouk Machine is et meyst bekend van et nümmer [[Maldòn (la musique dans la peau)]] uut 1990, wat ouk de nåme van et album is. Et nümmer håleden under anderen in de franske SNEP Singles Chart de nümmer 1 positsy en wyr werldwyd meyr as 1 miljoon mål verkocht.
+'''Zouk Machine''' is nen geheyl uut vrouwlüde bestånden [[kompa]] ov [[kizomba|zouk]] müsykgroop uut [[Guadeloupe]], den enkele internationåle hits hevt eskoord, vöärnåmelik in [[Frankryk]]. Zouk Machine is et meyst bekend van et nümmer [[Maldòn (la musique dans la peau)]] uut 1990, wat ouk de nåme van et album is. Et nümmer håleden under anderen in de franske SNEP Singles Chart de nümmer 1 positsy en wyr werldwyd meyr as 1 miljoon mål verkocht.
 
 == Geskydenis ==
 Zouk Machine wyr in 1986 uperichted döär de leden van [[Experience 7]], [[Guy Houiller]] en [[Yves Honoré]], en såmenestelled uut dree vrouwlüde uut Guadeloupe: [[Joëlle Ursull]], [[Christiane Obydol]] en [[Dominique Zorobabel]]. Et eyrsten album was ''Sové lanmou,'' eskreaven döär Guy Houiller en Yves Honoré, broder en swåger van Christiane Obydol. Joëlle Ursull verleet den groop en ging vöär ne solokarriere. Sy wyr in 1990 tweyds up et [[Eurovisie Songfesitival]] med et leed ''<nowiki>''White and Black Blues''</nowiki>'', ecomponered döär [[Serge Gainsbourg]] en [[Sylvain Augier]].
